- Fix all kinds of troubles regarding sitting and standing.
- Set maxDistance = distance (instead of defaulting to 30) in attackSkillSlot.
- The 'conf' chat command now works.
- partyAggressives now counts monsters your party attacked
- Fixed some cases of ksPlayers not working
- When following master around a corner, fallback to routing algorithm instead
  of trying to walk through the corner

New features:
- Mask password input display '*' instead of your real password (Only on linux
  console)
- If old files (from before the CVS cleanup) are found, warn the user
  and bail out. Too many people are reporting "bugs" that are a result
  of conflicts with old files.
- New selfCondition _whenPermitSkill _whenNotPermitSkill for use in auto-skill
  usage blocks; they are true/false respectively when you have been granted
  use of that temporary skill.

New config options:
- ksPlayers is a comma-seperated lists of player names that should be treated
  as if they were in your party for the purpose of KS checks.
- beepDomains contains a list of message domains (see Log.pm) for which
  openkore will beep.
- beepDomains_notInTown contains a list of message domains that are exempted
  from beepDomains if you are in a town.
- beepOnChat and beepOnPM were removed. Use this instead:
  beepDomains publicchat,emotion,pm

Internal:
- Move a "pm" message into "pm/sent" domain so that "beepOnDomains pm" won't
  beep on your own PMs.

Credits:
- jsteng: Pet detection fix.


==================
### 1.5.1 (beta)
==================

Bug fixes:
- Fix "undefined value as HASH" bug in the Wx item list control.
- Reset earned money when openshop.
- Fix crash when using "move" and "date" commands via PM/chat.
- partySkill target_timeouts are now saved when openkore uses the skill
  on the person, not when it tries to use it.
- The day parameter for autoBreakTime is no longer case sensitive.
- Fix a routing problem which causes Kore to walk back and forth.
- Various attackComboSlot bug fixes.